[gd_scene load_steps=2 format=3 uid="uid://hntblhpukc14"]

[ext_resource type="Script" path="res://scripts/ui/ui.gd" id="1_fdyji"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_fdyji")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 211.0
offset_bottom = 125.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="jump_label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Saltos:"

[node name="jump_count" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="VBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="fell_label" type="Label" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Ca√≠das:"

[node name="fell_count" type="Label" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "0"
